[gd_scene load_steps=10 format=3 uid="uid://gs4r4thal4j0"]

[ext_resource type="PackedScene" uid="uid://c522uuunlde0k" path="res://scenes/player.tscn" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://ykt42y7cv6df" path="res://scenes/main.gd" id="1_tipki"]
[ext_resource type="PackedScene" uid="uid://dth61joyvxwa4" path="res://scenes/finish_line.tscn" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://bj5t1b8lta5im" path="res://my-assets-freeway-mod/terrain.png" id="2_tipki"]
[ext_resource type="AudioStream" uid="uid://11vjx2qy803x" path="res://my-assets-freeway-mod/sons/theme-bg (mp3cut.net).wav" id="5_85g3d"]
[ext_resource type="AudioStream" uid="uid://cod2wfhqxronl" path="res://material freeway/sons/ponto.wav" id="5_o6xl0"]
[ext_resource type="AudioStream" uid="uid://bkucg0noehkvo" path="res://material freeway/sons/ganhou.wav" id="6_tipki"]
[ext_resource type="AudioStream" uid="uid://rm0ojrhtdfr" path="res://my-assets-freeway-mod/sons/perdeu.mp3" id="7_85g3d"]
[ext_resource type="PackedScene" uid="uid://k0f6ibsjntlj" path="res://scenes/hud.tscn" id="7_o6xl0"]

[node name="main" type="Node"]
script = ExtResource("1_tipki")

[node name="lane" type="Sprite2D" parent="."]
scale = Vector2(0.833333, 0.702148)
texture = ExtResource("2_tipki")
centered = false

[node name="player" parent="." instance=ExtResource("1_0wfyh")]
position = Vector2(640, 690)

[node name="finish_line" parent="." instance=ExtResource("2_sugp2")]
position = Vector2(640, 64)

[node name="timerSlowCars" type="Timer" parent="."]
autostart = true

[node name="timerFastCars" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="audioTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_85g3d")

[node name="audioScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_o6xl0")

[node name="audioLose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_85g3d")

[node name="audioWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tipki")

[node name="HUD" parent="." instance=ExtResource("7_o6xl0")]

[node name="gameOverTimer" type="Timer" parent="."]
wait_time = 136.0

[connection signal="score" from="player" to="." method="_on_player_score"]
[connection signal="timeout" from="timerSlowCars" to="." method="_on_timer_slow_cars_timeout"]
[connection signal="timeout" from="timerFastCars" to="." method="_on_timer_fast_cars_timeout"]
[connection signal="again" from="HUD" to="." method="_on_hud_again"]
[connection signal="timeout" from="gameOverTimer" to="." method="_on_game_over_timer_timeout"]
